TASK2 -> fix overflow of display

--- a/Task2/src/index.css
+++ b/Task2/src/index.css
@@ -27,6 +27,7 @@ body {
   align-items: center;
   justify-content: flex-end;
   font-size: 24px;
+  width: 250px;
 }
 
 .input {
